# python-project-83

./: .gitignore  Makefile  README.md  __init__.py  database.sql  docker.txt  package-lock.json  pyproject.toml
.github/workflows/: lint-check.yml
page_analyzer/: __init__.py  app.py  db_manager.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
